--- a/index.html
+++ b/index.html
@@ -109,9 +109,7 @@
           >open-sourced on GitHub</a
         >
         and
-        <a
-          href="https://6728bfc7d4550ad4881400ea--clemy22.netlify.app/"
-          target="_blank"
+        <a href="https://clemy22.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
