--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           >open-sourced on GitHub</a
         >
         and
-        <a href="https://clemy22.netlify.app/" target="_blank"
+        <a href="https://6728f73930c4e800082a92b2--clemy22.netlify.app/" target="_blank"
           >hosted on Netlify</a
         >
       </footer>
